tests/resources/invalid/type/error/with_wrong_type.mamba
def my_string <- "my string"

with my_string as my_int: Int do
    print "error"
